Atualizar o index.html

--- a/projeto_landing_page_mel/index.html
+++ b/projeto_landing_page_mel/index.html
@@ -112,8 +112,8 @@
     </main>
     <footer>
         <div class="footer">
-            <p>Todos os direitos reservados - Mel Arruda</p><br>
-            <p>Rua Fulano de Siclano 212 - São Paulo - SP</p>
+            <p>Todos os direitos reservados - Gustavo Arruda</p><br>
+            <p>Zona Sul, São Paulo - SP</p>
         </div>
     </footer>
 
